fix(components): set overflow on non-menu popovers

--- a/packages/components/src/styles/Popover.module.css
+++ b/packages/components/src/styles/Popover.module.css
@@ -101,6 +101,10 @@
     }
   }
 
+  &:not(:is([data-trigger='MenuTrigger'], [data-trigger='SubmenuTrigger'])):not(:has(.arrow)) {
+    overflow: auto;
+  }
+
   @media (prefers-reduced-motion: no-preference) {
     &[data-entering] {
       animation-name: slide;
